force-app/main/default/objects/tspa__File_Transfer_Folder__c/fields/tspa__Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>tspa__Folder_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>