force-app/main/default/objects/tspa__File_Transfer_Folder__c/fields/tspa__ParentFolderId__c.field-meta.xml
<CustomField>
    <fullName>tspa__ParentFolderId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Folder Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>